--- a/HomePage.html
+++ b/HomePage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -137,7 +137,7 @@
 
   <hr />
 
-  <!-- Footer -->
+  <!-- Footer aaa -->
   <footer>
     <div>
       <img src="assets/img/logo-placeholder.png" alt="Logo" width="60" height="60" />
@@ -166,3 +166,4 @@
 
 </body>
 </html>
+
