--- a/Phase-2/evaluate-service.html
+++ b/Phase-2/evaluate-service.html
@@ -7,42 +7,44 @@
 </head>
 <body>
 
-  <!-- Page Title -->
   <h2>Service Evaluation</h2>
 
-  <!-- Service Evaluation Form -->
   <form action="#" method="post">
 
-    <!-- Service Dropdown -->
     <p>
       <label for="service">Service:</label><br>
       <select id="service" name="service">
         <option value="">Select Previous Service</option>
-        <option value="service1">Service 1</option>
-        <option value="service2">Service 2</option>
-        <option value="service3">Service 3</option>
+        <option value="">Service1</option>
+        <option value="">Service2</option>
+        <option value="">Service3</option>
+       
       </select>
     </p>
 
-    <!-- Rating Section (visual only for Phase 2) -->
     <p class="stars">
       <label>Rate this Service:</label><br>
+	  
+      <input type="radio" id="star5" name="rating" value="5">
+      <label for="star5" class="star">&#9733;</label>
 
-      <!-- gray, unclickable stars -->
-      <span class="star">&#9733;</span>
-      <span class="star">&#9733;</span>
-      <span class="star">&#9733;</span>
-      <span class="star">&#9733;</span>
-      <span class="star">&#9733;</span>
-    </p>
+      <input type="radio" id="star4" name="rating" value="4">
+      <label for="star4" class="star">&#9733;</label>
 
-    <!-- Feedback Section -->
+      <input type="radio" id="star3" name="rating" value="3">
+      <label for="star3" class="star">&#9733;</label>
+
+      <input type="radio" id="star2" name="rating" value="2">
+      <label for="star2" class="star">&#9733;</label>
+
+      <input type="radio" id="star1" name="rating" value="1">
+      <label for="star1" class="star">&#9733;</label>
+    </p> 
     <p>
       <label for="feedback">Your Feedback:</label><br>
       <textarea id="feedback" name="feedback" rows="5" cols="40"></textarea>
     </p>
 
-    <!-- Submit Button -->
     <p>
       <input type="submit" value="Submit">
     </p>
