--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
-  <meta charset="UTF-8">
-  <title>Customer Dashboard - Ruqma</title>
+  <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <title>Customer Dashboard - Ruqma</title>
 </head>
 <body>
 <header> 
-   <!-- الهيدر: شعار + روابط + بحث -->
-  <div id="topbar">
+   <div id="topbar">
     <div id="logo-area">
-      <!-- نرجّع للهوم عند الضغط على الشعار -->
-      <a href="HomePage.html">
-        <img src="images/logo-placeholder.png" alt="Logo" width="45" height="45">
+      <a href="index.html">
+        <img src="images/logo.png" alt="Logo" width="70" height="90" id="logo-header">
       </a>
-      <span class="site-name">Ruqma</span>
     </div>
 
-   <!-- روابط الصفحات الأساسية -->
     <div id="nav-area">
       <a href="index.html">Home</a>
       <a href="Services.html">Services</a>
       <a href="About_us_page.html">About Us</a>
       <a href="customer-dashboard.html">Customer Dashboard</a>
-      <a href="Services_Provider_Dashboard.html">Provider Dashboard</a>
     </div>
+
     <!-- صندوق بحث بسيط (شكل فقط) -->
     <form id="search-box" action="#" method="get">
       <input type="search" name="q" placeholder="Search">
       <button type="submit" title="Search">
-        <img src="images/search-icon.png" alt="Search" width="18" height="18">
+        <img src="images/icon-search.png" alt="Search" width="18" height="18">
       </button>
     </form>
+	
   </div>
-  <hr>
   <!-- Breadcrumb with links -->
 <div class="container">
   <nav class="breadcrumb" aria-label="Breadcrumb">
-    <a href="index.html">Home Page</a>
+    <a href="index.html">Home</a>
     <span class="sep">›</span>
-    <strong>Customer’s Dashboard Page</strong>
+    <a href="customer-dashboard.html">Customer Dashboard</a>
   </nav>
 </div>
 
-
 </header>
-
+<main>
   <!-- <p>Home &gt; Customer Dashboard</p> -->
 
-  <h2>Previous Service Requests</h2>
-
   <table>
-    <caption></caption>
+    <caption>Previous Service Requests</caption>
     <tr>
       <th>Service Name</th>
       <th>Date of Request</th>
@@ -59,29 +53,57 @@
       <th>Status</th>
     </tr>
     <tr>
-      <td>Service 1</td>
-      <td>dd-mm-yyyy</td>
-      <td>$$$ SAR</td>
+      <td>Search Engine Optimization (SEO)</td>
+      <td>09-11-2023</td>
+      <td> 2000 SAR</td>
       <td>Pending</td>
     </tr>
     <tr>
-      <td>Service 2</td>
-      <td>dd-mm-yyyy</td>
-      <td>$$$ SAR</td>
+      <td>Visual Identity</td>
+      <td>22-03-2022</td>
+      <td>4000 SAR</td>
       <td>Provided</td>
     </tr>
     <tr>
-      <td>Service 3</td>
-      <td>dd-mm-yyyy</td>
-      <td>$$$ SAR</td>
+      <td>Creative Content Creation</td>
+      <td>04-08-2019</td>
+      <td> 8000 SAR</td>
       <td>Declined</td>
     </tr>
   </table>
 
-  <p class="buttons">
-    <a href="request-service.html">Request A Service</a>
-    <a href="evaluate-service.html">Evaluate Our Service</a>
-  </p>
+  <div class="buttons">
+    <a href="request-service.html" class="button">Request A Service</a>
+	<a href="evaluate-service.html" class="button">Evaluate Our Service</a>
+  </div>
+  
+  </main>
+ <footer> 
+<div id="footer">
+
+<div>
+<a href="index.html">
+        <img src="images/logo.png" alt="Logo" width="70" height="90" id="logo-footer">
+      </a>
+</div>
+<div>
+	Follow Us: <br> <br>
+    <div id="footer-icons">
+	  <a href="#"><img src="images/icon-x.png" alt="X"></a>
+      <a href="#"><img src="images/icon-Snapchat.png" alt="Snapchat"></a>
+      <a href="#"><img src="images/icon-Instagram.png" alt="Instagram"></a>
+	  <br>  
+    </div>
+</div>
+
+<div>
+    Contact Us: <br> 
+    <p>Email: Ruqma@gmail.com</p> <p> Phone: 055-555-5555</p>
+</div>
+  <p class="copy"> Copyright: &copy; 2025 Ruqma. All rights reserved.</p>
+ </div>
+ 
+</footer>
 
 </body>
 </html>
