--- a/evaluate-service.html
+++ b/evaluate-service.html
@@ -1,98 +1,120 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Service Evaluation - Ruqma</title>
+  <meta charset="utf-8">
+    <script src="evaluate.js"></script>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <title>Service Evaluation - Ruqma</title>
 </head>
-<body>
- <header> 
+<body> 
+<header> 
    <!-- الهيدر: شعار + روابط + بحث -->
   <div id="topbar">
     <div id="logo-area">
-      <!-- نرجّع للهوم عند الضغط على الشعار -->
-      <a href="HomePage.html">
-        <img src="images/logo-placeholder.png" alt="Logo" width="45" height="45">
+      <a href="index.html">
+        <img src="images/logo.png" alt="Logo" width="70" height="90" id="logo-header">
       </a>
-      <span class="site-name">Ruqma</span>
     </div>
 
-   <!-- روابط الصفحات الأساسية -->
     <div id="nav-area">
       <a href="index.html">Home</a>
       <a href="Services.html">Services</a>
       <a href="About_us_page.html">About Us</a>
       <a href="customer-dashboard.html">Customer Dashboard</a>
-      <a href="Services_Provider_Dashboard.html">Provider Dashboard</a>
     </div>
 
     <!-- صندوق بحث بسيط (شكل فقط) -->
     <form id="search-box" action="#" method="get">
       <input type="search" name="q" placeholder="Search">
       <button type="submit" title="Search">
-        <img src="images/search-icon.png" alt="Search" width="18" height="18">
+        <img src="images/icon-search.png" alt="Search" width="18" height="18">
       </button>
     </form>
+	
   </div>
-  <hr>
   <!-- Breadcrumb with links -->
 <div class="container">
   <nav class="breadcrumb" aria-label="Breadcrumb">
-    <a href="index.html">Home Page</a>
+    <a href="index.html">Home</a>
     <span class="sep">›</span>
       <a href="customer-dashboard.html">Customer Dashboard</a>
     <span class="sep">›</span>
-    <strong>Service Evaluation Page</strong>
+    <a href="evaluate-service.html">Service Evaluation</a>
   </nav>
 </div>
 
 
 </header>
 
-  <h2>Service Evaluation</h2>
+<main>
+  <h2 id="titleEvaluate">Service Evaluation</h2>
 
-  <form action="#" method="post">
-
-    <p>
-      <label for="service">Service:</label><br>
+<form action="#" method="post" class="EvaluateService" onsubmit="return validateEvaluation(event);">
+      Service:<br>
       <select id="service" name="service">
         <option value="">Select Previous Service</option>
-        <option value="">Service1</option>
-        <option value="">Service2</option>
-        <option value="">Service3</option>
-       
+       <option value="SEO">Search Engine Optimization (SEO)</option>
+        <option value="Content"> Creative Content Creation</option>
+        <option value="Identity">Visual Identity</option>
       </select>
-    </p>
-
-    <p class="stars">
-      <label>Rate this Service:</label><br>
+	  <br>
 	  
+	  Rate this Service: <br>
+    <div class="stars">
+
       <input type="radio" id="star5" name="rating" value="5">
-      <label for="star5" class="star">&#9733;</label>
+      <label for="star5">&#9733;</label>
 
       <input type="radio" id="star4" name="rating" value="4">
-      <label for="star4" class="star">&#9733;</label>
+      <label for="star4">&#9733;</label>
 
       <input type="radio" id="star3" name="rating" value="3">
-      <label for="star3" class="star">&#9733;</label>
+      <label for="star3">&#9733;</label>
 
       <input type="radio" id="star2" name="rating" value="2">
-      <label for="star2" class="star">&#9733;</label>
+      <label for="star2">&#9733;</label>
 
       <input type="radio" id="star1" name="rating" value="1">
-      <label for="star1" class="star">&#9733;</label>
-    </p> 
-    <p> 
-      <label for="feedback">Your Feedback:</label><br>
-      <textarea id="feedback" name="feedback" rows="5" cols="40"></textarea>
-    </p>
+      <label for="star1">&#9733;</label>
+    </div>
+	<br>
 
-    <p>
-      <input type="submit" value="Submit">
-    </p>
+      Your Feedback:<br>
+      <textarea id="feedback" name="feedback" rows="5" cols="40"></textarea>
+
+      <input type="submit" value="Submit" class="buttonsService">
 
   </form>
+  </main>
+  
+ <footer> 
+<div id="footer">
+
+<div>
+<a href="index.html">
+        <img src="images/logo.png" alt="Logo" width="70" height="90" id="logo-footer">
+      </a>
+</div>
+<div>
+	Follow Us: <br> <br>
+    <div id="footer-icons">
+	  <a href="#"><img src="images/icon-x.png" alt="X"></a>
+      <a href="#"><img src="images/icon-Snapchat.png" alt="Snapchat"></a>
+      <a href="#"><img src="images/icon-Instagram.png" alt="Instagram"></a>
+	  <br>  
+    </div>
+</div>
+
+<div>
+    Contact Us: <br> 
+    <p>Email: Ruqma@gmail.com</p> <p> Phone: 055-555-5555</p>
+</div>
+  <p class="copy"> Copyright: &copy; 2025 Ruqma. All rights reserved.</p>
+ </div>
+ 
+</footer>
 
 </body>
 </html>
-
