--- a/request-service.html
+++ b/request-service.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Request A Service - Ruqma</title>
+  <meta charset="utf-8">
+  <script src="request.js"></script>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <title>Request A Service - Ruqma</title>
 </head>
 <body>
-  <header> 
+ <header> 
    <!-- الهيدر: شعار + روابط + بحث -->
   <div id="topbar">
     <div id="logo-area">
-      <!-- نرجّع للهوم عند الضغط على الشعار -->
-      <a href="HomePage.html">
-        <img src="images/logo-placeholder.png" alt="Logo" width="45" height="45">
+      <a href="index.html">
+        <img src="images/logo.png" alt="Logo" width="70" height="90" id="logo-header">
       </a>
-      <span class="site-name">Ruqma</span>
     </div>
 
-   <!-- روابط الصفحات الأساسية -->
     <div id="nav-area">
       <a href="index.html">Home</a>
       <a href="Services.html">Services</a>
       <a href="About_us_page.html">About Us</a>
       <a href="customer-dashboard.html">Customer Dashboard</a>
-      <a href="Services_Provider_Dashboard.html">Provider Dashboard</a>
     </div>
+
     <!-- صندوق بحث بسيط (شكل فقط) -->
     <form id="search-box" action="#" method="get">
       <input type="search" name="q" placeholder="Search">
       <button type="submit" title="Search">
-        <img src="images/search-icon.png" alt="Search" width="18" height="18">
+        <img src="images/icon-search.png" alt="Search" width="18" height="18">
       </button>
     </form>
+	
   </div>
-  <hr>
   <!-- Breadcrumb with links -->
 <div class="container">
   <nav class="breadcrumb" aria-label="Breadcrumb">
@@ -41,48 +41,69 @@
     <span class="sep">›</span>
       <a href="customer-dashboard.html">Customer Dashboard</a>
     <span class="sep">›</span>
-    <strong>Request A Service Page</strong>
+    <a href="request-service.html">Request A Service</a>
   </nav>
 </div>
 
 
 </header>
 
-  <h2>Service Request</h2>
-  
-  <form action="#" method="post">
+<main>
+  <h2 id="titleRequest">Service Request</h2>
+  <!-- is this allowed -->
 
-  
-    <p>
-      <label for="name">Name:</label><br>
+<form action="#" method="post" class="RequestService-form" onsubmit="return validateRequest(event);">
+      Name:<br>
       <input type="text" id="name" name="customer_name">
-    </p>
+	   <br>
 
-    <p>
-      <label for="service">Service:</label><br>
+      Service:<br>
       <select id="service" name="service">
         <option value="">Select Service</option>
-        <option value="service1">Service 1</option>
-        <option value="service2">Service 2</option>
-        <option value="service3">Service 3</option>
+        <option >Search Engine Optimization (SEO)</option> <!-- remove value or replace it with full service name-->
+        <option value="Creative Content Creation"> Creative Content Creation</option>
+        <option value="Visual Identity">Visual Identity</option>
       </select>
-    </p>
-
-    <p>
-      <label for="due_date">Due Date:</label><br>
+	  <br>
+   
+      Due Date:<br>
       <input type="date" id="due_date" name="due_date">
-    </p>
-
-    <p>
-      <label for="description">Description:</label><br>
+	  <br>
+ 
+      Description:<br>
       <textarea id="description" name="description" rows="5" cols="40"></textarea>
-    </p>
-
-    <p>
-      <input type="submit" value="Submit Request">
-    </p>
+ 
+      <input type="submit" value="Submit Request" class="buttonsService">
 
   </form>
+  <div id="addedRequests"></div>
+  </main>
 
+ <footer> 
+<div id="footer">
+
+<div>
+<a href="index.html">
+        <img src="images/logo.png" alt="Logo" width="70" height="90" id="logo-footer">
+      </a>
+</div>
+<div>
+	Follow Us: <br> <br>
+    <div id="footer-icons">
+	  <a href="#"><img src="images/icon-x.png" alt="X"></a>
+      <a href="#"><img src="images/icon-Snapchat.png" alt="Snapchat"></a>
+      <a href="#"><img src="images/icon-Instagram.png" alt="Instagram"></a>
+	  <br>  
+    </div>
+</div>
+
+<div>
+    Contact Us: <br> 
+    <p>Email: Ruqma@gmail.com</p> <p> Phone: 055-555-5555</p>
+</div>
+  <p class="copy"> Copyright: &copy; 2025 Ruqma. All rights reserved.</p>
+ </div>
+ 
+</footer>
 </body>
 </html>
