--- a/Add_New_Service.html
+++ b/Add_New_Service.html
@@ -1,31 +1,29 @@
-<!DOCTYPE html>
+
 <html >
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Ruqma</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
+  
+
+  <title>Add New Service</title>
 </head>
 <body>
 
+
   
 <header> 
-   <!-- الهيدر: شعار + روابط + بحث -->
   <div id="topbar">
     <div id="logo-area">
-      <!-- نرجّع للهوم عند الضغط على الشعار -->
-      <a href="HomePage.html">
-        <img src="images/logo-placeholder.png" alt="Logo" width="45" height="45">
+      <a href="index.html">
+        <img src="images/logo.png" alt="Logo" width="70" height="90" id="logo-header">
       </a>
-      <span class="site-name">Ruqma</span>
     </div>
 
-   <!-- روابط الصفحات الأساسية -->
     <div id="nav-area">
       <a href="index.html">Home</a>
       <a href="Services.html">Services</a>
       <a href="About_us_page.html">About Us</a>
-      <a href="customer-dashboard.html">Customer Dashboard</a>
       <a href="Services_Provider_Dashboard.html">Provider Dashboard</a>
     </div>
 
@@ -33,71 +31,83 @@
     <form id="search-box" action="#" method="get">
       <input type="search" name="q" placeholder="Search">
       <button type="submit" title="Search">
-        <img src="images/search-icon.png" alt="Search" width="18" height="18">
+        <img src="images/icon-search.png" alt="Search" width="18" height="18">
       </button>
     </form>
+	
   </div>
-  <hr>
   <!-- Breadcrumb with links -->
 <div class="container">
   <nav class="breadcrumb" aria-label="Breadcrumb">
     <a href="index.html">Home</a>
     <span class="sep">›</span>
-    <a href="Services_Provider_Dashboard.html">Service Provider Dashboard Page</a>
+    <a href="Services_Provider_Dashboard.html">Provider Dashboard</a>
     <span class="sep">›</span>
-    <strong>Add a New Service Page</strong>
+    <a href="Add_New_Service.html">Add a New Service</a>
   </nav>
 </div>
 
 </header>
 
-
+<main class="add-service-page">
 
   <!-- Page Title -->
   <h1>Add New Service</h1>
 
   <!-- Add Service Form -->
-  <form action="#" method="post" enctype="multipart/form-data">
+  <form id="serviceForm" enctype="multipart/form-data">
     
-    <label for="serviceName"><strong>Service Name:</strong></label><br>
-    <input type="text" id="serviceName" name="serviceName" placeholder="Enter service name" required><br><br>
+    <label for="serviceName"><strong>Service Name:</strong></label>
+    <input type="text" id="serviceName" required>
 
-    <label for="servicePrice"><strong>Service Price:</strong></label><br>
-    <input type="text" id="servicePrice" name="servicePrice" placeholder="Enter price" required><br><br>
+    <label for="servicePrice"><strong>Service Price:</strong></label>
+    <input type="text" id="servicePrice" required>
 
-    <label for="serviceDescription"><strong>Service Description:</strong></label><br>
-    <textarea id="serviceDescription" name="serviceDescription" rows="5" placeholder="Enter description" required></textarea><br><br>
+    <label for="serviceDescription"><strong>Service Description:</strong></label>
+    <textarea id="serviceDescription" rows="5" required></textarea>
 
-
-      <p><b>Upload Photo:</b></p>
-
+    <p><strong>Upload Photo:</strong></p>
     <div style="border: 1px solid black; border-radius: 10px; width: 300px; height: 150px; text-align: center; padding: 10px;">
-        <img src="upload-icon.png" alt="Upload Icon" width="40" height="40"><br>
-        <p>Browes a File </p>
-        <input type="file" name="photo">
+        <img src="images/upload-icon.png" width="60">
+        <p>Browse File</p>
+        <input type="file" id="photo">
     </div>
 
-    <p>
-        <input type="submit" value="Submit">
-    </p>
+    <input type="submit" value="Add Service">
 
-    
-  </form>
+</form>
+
+ 
+
+</main>
 
   <!-- Footer -->
-    <div id="footer">
-    <h3>Follow Us</h3>
+    <footer> 
+<div id="footer">
+
+<div>
+<a href="index.html">
+        <img src="images/logo.png" alt="Logo" width="70" height="90" id="logo-footer">
+      </a>
+</div>
+<div>
+	Follow Us: <br> <br>
     <div id="footer-icons">
-      <a href="#"><img src="images/icon1.png" alt="Snapchat"></a>
-      <a href="#"><img src="images/icon2.png" alt="Instagram"></a>
-      <a href="#"><img src="images/icon3.png" alt="X"></a>
-      <a href="#"><img src="images/icon4.png" alt="LinkedIn"></a>
+	  <a href="#"><img src="images/icon-x.png" alt="X"></a>
+      <a href="#"><img src="images/icon-Snapchat.png" alt="Snapchat"></a>
+      <a href="#"><img src="images/icon-Instagram.png" alt="Instagram"></a>
+	  <br>  
     </div>
+</div>
 
-    <h3>Contact Us</h3>
-    <p>Email: info@example.com | Phone: 050-000-0000</p>
-    <p class="copy">© 2025 Ruqma. All rights reserved.</p>
-  </div>
-
+<div>
+    Contact Us: <br> 
+    <p>Email: Ruqma@gmail.com</p> <p> Phone: 055-555-5555</p>
+</div>
+  <p class="copy"> Copyright: &copy; 2025 Ruqma. All rights reserved.</p>
+ </div>
+ 
+</footer>
+ <script src="script.js"></script>
 </body>
 </html>
